fix: [PIE-1126]: fixing run button alignment issue (#5097)
* fix: [PIE-1126]: fixinf run button alignment issue

* fix: [PIE-1126]: updating snapshot

--- a/src/modules/70-pipeline/pages/pipelines/PipelinesPage.module.scss
+++ b/src/modules/70-pipeline/pages/pipelines/PipelinesPage.module.scss
@@ -97,6 +97,7 @@ $header-height: 80px;
 .runPipelineListBtn {
   background-color: var(--green-500) !important;
   border: var(--green-500) !important;
+  padding-right: 8px !important;
 }
 
 .topHeaderFields {
